# konjugaton

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DEV-WORKFLOW.md  LICENSE  README.md  RELEASE.md  entrypoint.py  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: COMBINATORICS.md  ideas-general.md  ideas-konjugaton.md  ideas.md  morpheme-skill-design.md  morpheme-skill-execution-plan.md
mem-tracking/: build-apk.sh  build-dist.sh  track.py
mem-tracking/reports/: 20260613_145556-bash.json  apk-cold-build.json
minimal-konjugaton-android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
minimal-konjugaton-android/app/: build.gradle.kts  proguard-rules.pro
minimal-konjugaton-android/app/src/main/: AndroidManifest.xml
minimal-konjugaton-android/app/src/main/assets/: contexts.json  endings.json  verbs.json
minimal-konjugaton-android/app/src/main/kotlin/com/konjugaton/hc/: MainActivity.kt
minimal-konjugaton-android/app/src/main/kotlin/com/konjugaton/hc/data/: Loader.kt  Settings.kt  Store.kt
minimal-konjugaton-android/app/src/main/kotlin/com/konjugaton/hc/domain/: Catalog.kt  ConjTable.kt  Conjugator.kt  Enums.kt  Generator.kt  Grading.kt  Irt.kt  Labels.kt  LearnerState.kt  Models.kt  Permutations.kt  Practice.kt  Quality.kt  Render.kt
minimal-konjugaton-android/app/src/main/kotlin/com/konjugaton/hc/ui/: AppState.kt  Screens.kt
minimal-konjugaton-android/app/src/main/res/values/: themes.xml
minimal-konjugaton-android/app/src/main/res/values-night/: themes.xml
minimal-konjugaton-android/app/src/test/kotlin/com/konjugaton/hc/data/: SettingsTest.kt
minimal-konjugaton-android/app/src/test/kotlin/com/konjugaton/hc/domain/: ConjTableTest.kt  ConjugatorTest.kt  GradingTest.kt  IrtTest.kt  QualityTest.kt
minimal-konjugaton-android/gradle/: libs.versions.toml
minimal-konjugaton-android/tools/: sync_taxonomy.py
scripts/: convert-to-public.sh  release-e2e.sh  sync-ideas.sh  tui_actor.py
src/konjugaton/: __init__.py  __main__.py  migrate.py  textutils.py
src/konjugaton/_data/: README.md  __init__.py  contexts.yaml  endings.yaml  verbs.yaml
src/konjugaton/analytics/: __init__.py  irt.py  reports.py
src/konjugaton/cli/: __init__.py  app.py
src/konjugaton/data/: __init__.py  loader.py  models.py
src/konjugaton/domain/: __init__.py  agreement.py  conjugation.py  conjugation_table.py  context.py  enums.py  item.py  tables.py  taxonomy.py  verb.py
src/konjugaton/engine/: __init__.py  conjugator.py  generator.py  labels.py  paradigm.py  permutations.py  render.py
src/konjugaton/services/: __init__.py  catalog_service.py  grading.py  hints.py  output.py  practice.py  selection.py  selfcheck.py  table_service.py  textdiff.py
src/konjugaton/settings/: __init__.py  models.py  presets.py  store.py
src/konjugaton/state/: __init__.py  graph.py  json_repository.py  repository.py  scoring.py  vocab_state.py
src/konjugaton/tui/: __init__.py  app.py
tests/: test_cli.py  test_conjugation_table.py  test_conjugator.py  test_exhaustive.py  test_migrate.py  test_output.py  test_permutations.py  test_settings.py  test_shortcuts.py  test_textdiff.py  test_textutils.py
